キャンペーンスライダー実装途中

--- a/src/index.html
+++ b/src/index.html
@@ -153,26 +153,26 @@
         <h3 class="mv__text">into&nbsp;the&nbsp;ocean</h3>
       </div>
       <div class="mv__slider swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
+        <div class="mv__slider swiper-wrapper">
+          <div class="mv__slider swiper-slide">
             <div class="swiper-img">
               <img src="./assets/images/mv-img1-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
               <img src="./assets/images/mv-img1.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="mv__slider swiper-slide">
             <div class="swiper-img">
               <img src="./assets/images/mv-img2-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
               <img src="./assets/images/mv-img2.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="mv__slider swiper-slide">
             <div class="swiper-img">
               <img src="./assets/images/mv-img3-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
               <img src="./assets/images/mv-img3.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="mv__slider swiper-slide">
             <div class="swiper-img">
               <img src="./assets/images/mv-img4-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
               <img src="./assets/images/mv-img4.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
@@ -182,13 +182,236 @@
       </div>
    </div>
   <!--キャンペーン-->
-  <section id="campaign" class="campaign">
+  <!-- <section id="campaign" class="campaign">
     <div class="campaign__inner inner">
       <div class="section-title">
         <h3 class="section-title__main">Campaign</h3>
         <h3 class="section-title__sub">キャンペーン</h3>
+      </div> -->
+      <!-- <div class="campaign__slider swiper">
+        <div class="campaign__slider swiper-wrapper">
+          <div class="campaign__cards">
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+              </div>
+              <div class="card__body">
+                <div class="card-text">
+                  <p class="card-text__title">ライセンス講習</p>
+                  <p class="card-text__title-sub">ライセンス取得</p>
+                </div>
+                <p class="text-line"></p>
+                <div class="card-price">
+                  <p class="card-price__text">全部コミコミ（お一人様）</p>
+                  <div class="card-price-box">
+                    <p class="card-price__old-strike-through">¥56,000</p>
+                    <p class="card-price__new">¥46,000</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
+              </div>
+              <div class="card__body">
+                <div class="card-text">
+                  <p class="card-text__title">体験ダイビング</p>
+                  <p class="card-text__title-sub">貸切体験ダイビング</p>
+                </div>
+                <p class="text-line"></p>
+                <div class="card-price">
+                  <p class="card-price__text">全部コミコミ（お一人様）</p>
+                  <div class="card-price-box">
+                    <p class="card-price__old-strike-through">¥24,000</p>
+                    <p class="card-price__new">¥18,000</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
+              </div>
+              <div class="card__body">
+                <div class="card-text">
+                  <p class="card-text__title">体験ダイビング</p>
+                  <p class="card-text__title-sub">ナイトダイビング</p>
+                </div>
+                <p class="text-line"></p>
+                <div class="card-price">
+                  <p class="card-price__text">全部コミコミ（お一人様）</p>
+                  <div class="card-price-box">
+                    <p class="card-price__old"></p>
+                    <p class="card-price__new"></p>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="campaign-card__item">
+              <div class="card__img">
+                <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
+              </div>
+              <div class="card__body">
+                <div class="card-text">
+                  <p class="card-text__title">ファンダイビング</p>
+                  <p class="card-text__title-sub">貸切ファンダイビング</p>
+                </div>
+                <p class="text-line"></p>
+                <div class="card-price">
+                  <p class="card-price__text">全部コミコミ（お一人様）</p>
+                  <div class="card-price-box">
+                    <p class="card-price__old"></p>
+                    <p class="card-price__new"></p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div> -->
+    <section id="campaign" class="campaign">
+      <div class="campaign__inner inner">
+        <div class="section-title">
+                <h3 class="section-title__main">Campaign</h3>
+                <h3 class="section-title__sub">キャンペーン</h3>
+        </div>
+        <div class="campaign-slider swiper">
+                <div class="campaign-slider-wrapper swiper-wrapper">
+                  <div class="campaign-slider-slide swiper-slide">
+                    <a href="#" class="campaign-card__item">
+                      <div class="campaign-card__img">
+                        <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+                      </div>
+                      <div class="card__body">
+                        <div class="card-text">
+                          <p class="card-text__title">ライセンス講習</p>
+                          <p class="card-text__title-sub">ライセンス取得</p>
+                        </div>
+                        <p class="text-line"></p>
+                        <div class="card-price">
+                          <p class="card-price__text">全部コミコミ（お一人様）</p>
+                          <div class="card-price-box">
+                            <p class="card-price__old-strike-through">¥56,000</p>
+                            <p class="card-price__new">¥46,000</p>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <!-- <div class="campaign__cards"> -->
+                    <div class="campaign-slider-slide swiper-slide">
+                      <a href="#" class="campaign-card__item">
+                        <div class="campaign-card__img">
+                          <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
+                        </div>
+                        <div class="card__body">
+                          <div class="card-text">
+                            <p class="card-text__title">体験ダイビング</p>
+                            <p class="card-text__title-sub">貸切体験ダイビング</p>
+                          </div>
+                          <p class="text-line"></p>
+                          <div class="card-price">
+                            <p class="card-price__text">全部コミコミ（お一人様）</p>
+                            <div class="card-price-box">
+                              <p class="card-price__old-strike-through">¥24,000</p>
+                              <p class="card-price__new">¥18,000</p>
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="campaign-slider-slide swiper-slide">
+                      <a href="#" class="campaign-card__item">
+                        <div class="campaign-card__img">
+                          <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
+                        </div>
+                        <div class="card__body">
+                          <div class="card-text">
+                            <p class="card-text__title">体験ダイビング</p>
+                            <p class="card-text__title-sub">ナイトダイビング</p>
+                          </div>
+                          <p class="text-line"></p>
+                          <div class="card-price">
+                            <p class="card-price__text">全部コミコミ（お一人様）</p>
+                            <div class="card-price-box">
+                              <p class="card-price__old"></p>
+                              <p class="card-price__new"></p>
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="campaign-slider-slide swiper-slide">
+                      <a href="#" class="campaign-card__item">
+                        <div class="card__img">
+                          <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
+                        </div>
+                        <div class="card__body">
+                          <div class="card-text">
+                            <p class="card-text__title">ファンダイビング</p>
+                            <p class="card-text__title-sub">貸切ファンダイビング</p>
+                          </div>
+                          <p class="text-line"></p>
+                          <div class="card-price">
+                            <p class="card-price__text">全部コミコミ（お一人様）</p>
+                            <div class="card-price-box">
+                              <p class="card-price__old"></p>
+                              <p class="card-price__new"></p>
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                </div>
+        </div>
+        <!-- <div class="campaign-button-layout">
+          <a href="#" class="button">View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
+          </a>
+        </div> -->
       </div>
-      <div class="campaign__cards">
+    </section>
+  <!--アバウトアス-->
+  <section id="about us" class="about us">
+    <div class="about us__inner inner">
+      <div class="section-title">
+        <h3 class="section-title__main">About us</h3>
+        <h3 class="section-title__sub">私たちについて</h3>
+      </div>
+
+      <!-- <div class="campaign-button-layout">
+        <a href="#" class="button">View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
+        </a>
+      </div> -->
+    </div>
+  </section>
+
+
+                  <!-- </div> -->
+          <!-- <div class="top-campaignswiper-container">
+            <div class="top-campaignswiper swiper js-card-swiper">
+              <div class="top-campaignswiper-wrapper swiper-wrapper">
+                <div class="top-campaignswiper-slide swiper-slide">
+                  <div class="top-campaignswiper-card campaign-card">
+                    <div class="campaign-cardimg">
+                      <img src="./assets/images/common/campaign-card01.jpg" alt="たくさんの熱帯魚が楽しそうに泳いでいる様子" width="280" height="188" loading="lazy">
+                    </div>
+                    <div class="campaign-cardbody">
+                      <p class="campaign-cardtag">
+                        <span>ライセンス講習</span>
+                      </p>
+                      <p class="campaign-cardtitle">ライセンス取得</p>
+                      <p class="campaign-cardtext">全部コミコミ(お一人様)</p>
+                      <div class="campaign-cardprice-wrap">
+                        <div class="campaign-cardprice-sub">
+                          <span>¥56,000</span>
+                        </div>
+                        <div class="campaign-card__price-main">
+                          ¥46,000
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+        <!-- <div class="campaign__cards">
         <a href="#" class="campaign-card__item">
           <div class="campaign-card__img">
             <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
@@ -265,8 +488,8 @@
             </div>
           </div>
         </a>
-      </div>
-    </div>
+        </div> -->
+    <!-- </div> -->
     <!-- <div class="button-layout">
       <a href="#" class="button">
           View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
