--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
       </div>
    </div>
   <!--キャンペーン-->
-    <!-- <section id="campaign" class="campaign">
+    <section id="campaign" class="campaign">
       <div class="campaign__inner inner">
         <div class="section-title">
           <h3 class="section-title__main">Campaign</h3>
@@ -191,87 +191,89 @@
         <div class="campaign-slider swiper">
           <div class="campaign-slider-wrapper swiper-wrapper">
             <div class="campaign-slider-slide swiper-slide">
-                    <a href="#" class="campaign-card__item">
-                      <div class="campaign-card__img">
-                        <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
-                      </div>
-                      <div class="card__body">
-                        <div class="card-text">
-                          <p class="card-text__title">ライセンス講習</p>
-                          <p class="card-text__title-sub">ライセンス取得</p>
-                        </div>
-                        <p class="text-line"></p>
-                        <div class="card-price">
-                          <p class="card-price__text">全部コミコミ（お一人様）</p>
-                          <div class="card-price-box">
-                            <p class="card-price__old-strike-through">¥56,000</p>
-                            <p class="card-price__new">¥46,000</p>
-                          </div>
-                        </div>
-                      </div>
-                    </a>
+            <a href="#" class="campaign-card__item">
+              <div class="campaign-card__img">
+                <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+              </div>
+              <div class="card__body">
+                <div class="card-text">
+                  <p class="card-text__title">ライセンス講習</p>
+                  <p class="card-text__title-sub">ライセンス取得</p>
+                </div>
+                <p class="text-line"></p>
+                <div class="card-price">
+                  <p class="card-price__text">全部コミコミ（お一人様）</p>
+                  <div class="card-price-box">
+                    <p class="card-price__old-strike-through">¥56,000</p>
+                    <p class="card-price__new">¥46,000</p>
+                  </div>
+                </div>
+              </div>
+            </a>
             </div>
             <div class="campaign-slider-slide swiper-slide">
               <a href="#" class="campaign-card__item">
-                        <div class="campaign-card__img">
-                          <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
-                        </div>
-                        <div class="card__body">
-                          <div class="card-text">
-                            <p class="card-text__title">体験ダイビング</p>
-                            <p class="card-text__title-sub">貸切体験ダイビング</p>
-                          </div>
-                          <p class="text-line"></p>
-                          <div class="card-price">
-                            <p class="card-price__text">全部コミコミ（お一人様）</p>
-                            <div class="card-price-box">
-                              <p class="card-price__old-strike-through">¥24,000</p>
-                              <p class="card-price__new">¥18,000</p>
-                            </div>
-                          </div>
-                        </div>
+                <div class="campaign-card__img">
+                    <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
+                </div>
+                <div class="card__body">
+                  <div class="card-text">
+                    <p class="card-text__title">体験ダイビング</p>
+                    <p class="card-text__title-sub">貸切体験ダイビング</p>
+                  </div>
+                  <p class="text-line"></p>
+                  <div class="card-price">
+                    <p class="card-price__text">全部コミコミ（お一人様）</p>
+                    <div class="card-price-box">
+                      <p class="card-price__old-strike-through">¥24,000</p>
+                      <p class="card-price__new">¥18,000</p>
+                    </div>
+                  </div>
+                </div>
               </a>
             </div>
             <div class="campaign-slider-slide swiper-slide">
               <a href="#" class="campaign-card__item">
-                        <div class="campaign-card__img">
-                          <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
-                        </div>
-                        <div class="card__body">
-                          <div class="card-text">
-                            <p class="card-text__title">体験ダイビング</p>
-                            <p class="card-text__title-sub">ナイトダイビング</p>
-                          </div>
-                          <p class="text-line"></p>
-                          <div class="card-price">
-                            <p class="card-price__text">全部コミコミ（お一人様）</p>
-                            <div class="card-price-box">
-                              <p class="card-price__old"></p>
-                              <p class="card-price__new"></p>
-                            </div>
-                          </div>
-                        </div>
+                <div class="campaign-card__img">
+                  <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
+                </div>
+                <div class="card__body">
+                  <div class="card-text">
+                    <p class="card-text__title">体験ダイビング</p>
+                    <p class="card-text__title-sub">ナイトダイビング</p>
+                  </div>
+                  <p class="text-line"></p>
+                  <div class="card-price">
+                    <p class="card-price__text">全部コミコミ（お一人様）</p>
+                    <div class="card-price-box">
+                      <p class="card-price__old-strike-through">¥10,000</p>
+                      <p class="card-price__new">¥8,000</p>
+                    </div>
+                  </div>
+                </div>
               </a>
             </div>
             <div class="campaign-slider-slide swiper-slide">
               <a href="#" class="campaign-card__item">
-                        <div class="card__img">
-                          <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
-                        </div>
-                        <div class="card__body">
-                          <div class="card-text">
+                <div class="card__img">
+                  <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
+                </div>
+                <div class="card__body">
+                  <div class="card-text">
                             <p class="card-text__title">ファンダイビング</p>
                             <p class="card-text__title-sub">貸切ファンダイビング</p>
-                          </div>
-                          <p class="text-line"></p>
-                          <div class="card-price">
-                            <p class="card-price__text">全部コミコミ（お一人様）</p>
-                            <div class="card-price-box">
-                              <p class="card-price__old"></p>
-                              <p class="card-price__new"></p>
-                            </div>
-                          </div>
-                        </div>
+                  </div>
+                  <p class="text-line"></p>
+                  <div class="card-price">
+                    <p class="card-price__text">全部コミコミ（お一人様）</p>
+                    <div class="card-price-box">
+                      <div class="card-price-box">
+                        <p class="card-price__old-strike-through">¥20,000</p>
+                        <p class="card-price__new">¥16,000</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </a>
             </div>
           </div>
@@ -281,21 +283,14 @@
           </a>
         </div>
       </div>
-    </section> -->
+    </section>
   <!--アバウトアス-->
-  <section id="about us" class="about us">
-    <div class="about us__inner inner">
+  <section id="about-us" class="about us">
+    <div class="about-us__inner inner">
       <div class="section-title">
         <h3 class="section-title__main">About us</h3>
         <h3 class="section-title__sub">私たちについて</h3>
       </div>
-    </div>
-  </section>
-
-      <!-- <div class="campaign-button-layout">
-        <a href="#" class="button">View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
-        </a>
-      </div> -->
     </div>
   </section>
 
