キャンペーンのピクパ

--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
     <section id="campaign" class="campaign">
       <div class="campaign__inner inner">
         <div class="section-title">
-          <h3 class="section-title__main">Campaign</h3>
+          <h2 class="section-title__main">Campaign</h2>
           <p class="section-title__sub">キャンペーン</p>
         </div>
         <div class="campaign-slider swiper">
@@ -202,7 +202,7 @@
                 </div>
                 <p class="text-line"></p>
                 <div class="card-price">
-                  <p class="card-price__text">全部コミコミ（お一人様）</p>
+                  <p class="card-price__text">全部コミコミ(お一人様)</p>
                   <div class="card-price-box">
                     <p class="card-price__old-strike-through">¥56,000</p>
                     <p class="card-price__new">¥46,000</p>
@@ -223,7 +223,7 @@
                   </div>
                   <p class="text-line"></p>
                   <div class="card-price">
-                    <p class="card-price__text">全部コミコミ（お一人様）</p>
+                    <p class="card-price__text">全部コミコミ(お一人様)</p>
                     <div class="card-price-box">
                       <p class="card-price__old-strike-through">¥24,000</p>
                       <p class="card-price__new">¥18,000</p>
@@ -244,7 +244,7 @@
                   </div>
                   <p class="text-line"></p>
                   <div class="card-price">
-                    <p class="card-price__text">全部コミコミ（お一人様）</p>
+                    <p class="card-price__text">全部コミコミ(お一人様)</p>
                     <div class="card-price-box">
                       <p class="card-price__old-strike-through">¥10,000</p>
                       <p class="card-price__new">¥8,000</p>
@@ -265,7 +265,7 @@
                   </div>
                   <p class="text-line"></p>
                   <div class="card-price">
-                    <p class="card-price__text">全部コミコミ（お一人様）</p>
+                    <p class="card-price__text">全部コミコミ(お一人様)</p>
                     <div class="card-price-box">
                       <div class="card-price-box">
                         <p class="card-price__old-strike-through">¥20,000</p>
@@ -288,9 +288,15 @@
   <section id="about-us" class="about us">
     <div class="about-us__inner inner">
       <div class="section-title">
-        <h3 class="section-title__main">About us</h3>
-        <h3 class="section-title__sub">私たちについて</h3>
+        <h2 class="section-title__main">About us</h2>
+        <p class="section-title__sub">私たちについて</p>
       </div>
+      <div class="about-us__img">
+        <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img3">
+        <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1">
+      </div>
+      <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
+      <p class="about-us-text"></p>
     </div>
   </section>
 
