--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
@@ -279,7 +279,7 @@
           </div>
         </div>
         <div class="campaign-button-layout">
-          <a href="#" class="button">View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
+          <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
           </a>
         </div>
       </div>
