キャンペーンrem修正

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
   <!--キャンペーン-->
     <section id="campaign" class="campaign">
       <div class="campaign__inner inner">
-        <div class="section-title">
+        <div class="campaign section-title">
           <h2 class="section-title__main">Campaign</h2>
           <p class="section-title__sub">キャンペーン</p>
         </div>
@@ -285,7 +285,7 @@
       </div>
     </section>
   <!--アバウトアス-->
-  <section id="about-us" class="about us">
+  <section id="about-us" class="about-us">
     <div class="about-us__inner inner">
       <div class="section-title">
         <h2 class="section-title__main">About us</h2>
