--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,7 @@
     <main>
     <!--メインビュー-->
    <div class="mv js-mv">
+    <div class="mv__inner">
       <div class="mv__title-wrap">
         <h2 class="mv__title-sub">DIVING</h2>
         <h3 class="mv__text">into&nbsp;the&nbsp;ocean</h3>
@@ -180,7 +181,7 @@
           </div>
         </div>
       </div>
-   </div>
+    </div>
   <!--キャンペーン-->
     <section id="campaign" class="campaign">
       <div class="campaign__inner inner">
