アバウトアス作成

--- a/src/index.html
+++ b/src/index.html
@@ -296,8 +296,18 @@
         <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img3">
         <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1">
       </div>
-      <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
-      <p class="about-us-text"></p>
+
+      <div class="about-us-container">
+        <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
+        <div class="about-us-container__box">
+          <p class="about-us-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+          <div class="about-us-button-layout">
+            <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
