アバウトアス修正

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
     <div class="mv__inner">
       <div class="mv__title-wrap">
         <h2 class="mv__title-sub">DIVING</h2>
-        <h3 class="mv__text">into&nbsp;the&nbsp;ocean</h3>
+        <h3 class="mv__text">into the ocean</h3>
       </div>
       <div class="mv__slider swiper">
         <div class="mv__slider swiper-wrapper">
@@ -300,7 +300,7 @@
       <div class="about-us-container">
         <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
         <div class="about-us-container__box">
-          <p class="about-us-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+          <p class="about-us-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
           <div class="about-us-button-layout">
             <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
             </a>
