--- a/src/index.html
+++ b/src/index.html
@@ -295,8 +295,8 @@
       <div class="about-us__img">
         <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img3">
         <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1">
+        <img src="./assets/images/about-us-logo.svg" alt="サンゴとイソギンチャクの絵" class="about-us__logo">
       </div>
-
       <div class="about-us-container">
         <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
         <div class="about-us-container__box">
@@ -307,7 +307,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
