--- a/src/index.html
+++ b/src/index.html
@@ -297,11 +297,11 @@
         <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1">
         <img src="./assets/images/about-us-logo.svg" alt="サンゴとイソギンチャクの絵" class="about-us__logo">
       </div>
-      <div class="about-us-container">
+      <div class="about-us__container">
         <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
-        <div class="about-us-container__box">
+        <div class="about-us__container-box">
           <p class="about-us-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-          <div class="about-us-button-layout">
+          <div class="about-us__button-layout">
             <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
             </a>
           </div>
