アバウトアス変更とインフォメーションhtml追加

--- a/src/index.html
+++ b/src/index.html
@@ -309,9 +309,17 @@
       </div>
     </div>
   </section>
+    <!--インフォメーション-->
+    <section id="information" class="information">
+      <div class="information__inner inner">
+        <div class="section-title">
+          <h2 class="section-title__main">Information</h2>
+          <p class="section-title__sub">ダイビング情報</p>
+        </div>
+      </div>
+    </section>
 
 
-                  <!-- </div> -->
           <!-- <div class="top-campaignswiper-container">
             <div class="top-campaignswiper swiper js-card-swiper">
               <div class="top-campaignswiper-wrapper swiper-wrapper">
