--- a/src/index.html
+++ b/src/index.html
@@ -279,6 +279,8 @@
             </div>
           </div>
         </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
         <div class="campaign-button-layout">
           <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
           </a>
@@ -288,19 +290,19 @@
   <!--アバウトアス-->
   <section id="about-us" class="about-us">
     <div class="about-us__inner inner">
-      <div class="section-title">
+      <div class="about-us section-title">
         <h2 class="section-title__main">About us</h2>
         <p class="section-title__sub">私たちについて</p>
       </div>
       <div class="about-us__img">
         <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img3">
         <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1">
-        <img src="./assets/images/about-us-logo.svg" alt="サンゴとイソギンチャクの絵" class="about-us__logo">
+        <!-- <img src="./assets/images/about-us-logo.svg" alt="サンゴとイソギンチャクの絵" class="about-us__logo"> -->
       </div>
       <div class="about-us__container">
         <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
         <div class="about-us__container-box">
-          <p class="about-us-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+          <p class="about-us-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト<span class="about-us__md-none">が入ります。</span></p>
           <div class="about-us__button-layout">
             <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
             </a>
@@ -312,123 +314,30 @@
     <!--インフォメーション-->
     <section id="information" class="information">
       <div class="information__inner inner">
-        <div class="section-title">
+        <div class="information section-title">
           <h2 class="section-title__main">Information</h2>
           <p class="section-title__sub">ダイビング情報</p>
         </div>
+        <div class="information__container">
+          <div class="information__img">
+            <img src="./assets/images/information-img.jpg" alt="3匹の黄色い魚が珊瑚礁の近くを様子">
+          </div>
+          <div class="information__box">
+            <h3 class="information__box-title">ライセンス講習</h3>
+            <p class="information__text-line"></p>
+            <p class="information__text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADI<br class="md-none">の「正規店」として店舗登録されています。<br>正規登録店として、安心安全に初めての方でも安心安全にライセン<br class="md-none">ス取得をサポート致します。
+            </p>
+            <div class="information__button-layout">
+              <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
+
     </section>
 
 
-          <!-- <div class="top-campaignswiper-container">
-            <div class="top-campaignswiper swiper js-card-swiper">
-              <div class="top-campaignswiper-wrapper swiper-wrapper">
-                <div class="top-campaignswiper-slide swiper-slide">
-                  <div class="top-campaignswiper-card campaign-card">
-                    <div class="campaign-cardimg">
-                      <img src="./assets/images/common/campaign-card01.jpg" alt="たくさんの熱帯魚が楽しそうに泳いでいる様子" width="280" height="188" loading="lazy">
-                    </div>
-                    <div class="campaign-cardbody">
-                      <p class="campaign-cardtag">
-                        <span>ライセンス講習</span>
-                      </p>
-                      <p class="campaign-cardtitle">ライセンス取得</p>
-                      <p class="campaign-cardtext">全部コミコミ(お一人様)</p>
-                      <div class="campaign-cardprice-wrap">
-                        <div class="campaign-cardprice-sub">
-                          <span>¥56,000</span>
-                        </div>
-                        <div class="campaign-card__price-main">
-                          ¥46,000
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
-        <!-- <div class="campaign__cards">
-        <a href="#" class="campaign-card__item">
-          <div class="campaign-card__img">
-            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
-          </div>
-          <div class="card__body">
-            <div class="card-text">
-              <p class="card-text__title">ライセンス講習</p>
-              <p class="card-text__title-sub">ライセンス取得</p>
-            </div>
-            <p class="text-line"></p>
-            <div class="card-price">
-              <p class="card-price__text">全部コミコミ（お一人様）</p>
-              <div class="card-price-box">
-                <p class="card-price__old-strike-through">¥56,000</p>
-                <p class="card-price__new">¥46,000</p>
-              </div>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="campaign-card__item">
-          <div class="campaign-card__img">
-            <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
-          </div>
-          <div class="card__body">
-            <div class="card-text">
-              <p class="card-text__title">体験ダイビング</p>
-              <p class="card-text__title-sub">貸切体験ダイビング</p>
-            </div>
-            <p class="text-line"></p>
-            <div class="card-price">
-              <p class="card-price__text">全部コミコミ（お一人様）</p>
-              <div class="card-price-box">
-                <p class="card-price__old-strike-through">¥24,000</p>
-                <p class="card-price__new">¥18,000</p>
-              </div>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="campaign-card__item">
-          <div class="campaign-card__img">
-            <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
-          </div>
-          <div class="card__body">
-            <div class="card-text">
-              <p class="card-text__title">体験ダイビング</p>
-              <p class="card-text__title-sub">ナイトダイビング</p>
-            </div>
-            <p class="text-line"></p>
-            <div class="card-price">
-              <p class="card-price__text">全部コミコミ（お一人様）</p>
-              <div class="card-price-box">
-                <p class="card-price__old"></p>
-                <p class="card-price__new"></p>
-              </div>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="campaign-card__item">
-          <div class="card__img">
-            <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
-          </div>
-          <div class="card__body">
-            <div class="card-text">
-              <p class="card-text__title">ファンダイビング</p>
-              <p class="card-text__title-sub">貸切ファンダイビング</p>
-            </div>
-            <p class="text-line"></p>
-            <div class="card-price">
-              <p class="card-price__text">全部コミコミ（お一人様）</p>
-              <div class="card-price-box">
-                <p class="card-price__old"></p>
-                <p class="card-price__new"></p>
-              </div>
-            </div>
-          </div>
-        </a>
-        </div> -->
-    <!-- </div> -->
-    <!-- <div class="button-layout">
-      <a href="#" class="button">
-          View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
-      </a>
-    </div> -->
     </main>
     <footer>
 
