ブログの背景とアバウトアスのあしらい修正

--- a/src/index.html
+++ b/src/index.html
@@ -299,7 +299,7 @@
       <div class="about-us__img">
         <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img3">
         <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1">
-        <img src="./assets/images/about-us-logo.svg" alt="サンゴとイソギンチャクの絵" class="about-us__logo">
+        <!-- <img src="./assets/images/about-us-logo.svg" alt="サンゴとイソギンチャクの絵" class="about-us__logo"> -->
       </div>
       <div class="about-us__container">
         <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
