--- a/src/index.html
+++ b/src/index.html
@@ -528,6 +528,47 @@
         </div>
       </div>
     </section>
+    <!--コンタクト-->
+    <section id="contact" class="contact">
+      <div class="contact__inner inner">
+        <div class="contact__container">
+          <a href="index.html" class="contact__logo-layout">
+            <h3 class="contact__logo">
+              <img src="./assets/images/contact-logo.svg" alt="CodeUps">
+            </h3>
+          </a>
+          <p class="contact-text-line"></p>
+          <div class="contact-information">
+            <ul class="contact-information__items">
+              <li class="contact-information__item">
+                <p class="contact-information__item-text">沖縄県那覇市1-1</p>
+              </li>
+              <li class="contact-information__item">
+                <p class="contact-information__item-text">TEL:0120-000-0000</p>
+              </li>
+              <li class="contact-information__item">
+                <p class="contact-information__item-text">営業時間:8:30-19:00</p>
+              </li>
+              <li class="contact-information__item">
+                <p class="contact-information__item-text">定休日:毎週火曜日</p>
+              </li>
+            </ul>
+            <div class="contact__img">
+              <img src="./assets/images/contact-img.jpg" alt="グレー色の背景">
+            </div>
+          </div>
+        </div>
+        <div class="contact section-title">
+          <h2 class="section-title__main-shadow">Contact</h2>
+          <p class="section-title__sub-shadow">お問い合わせ</p>
+          <p class="contact-section-title__text">ご予約・お問い合わせはコチラ</p>
+        </div>
+        <div class="contact-button-layout">
+          <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
+          </a>
+        </div>
+      </div>
+    </section>
 
     </main>
     <footer>
