コンタクトsp修正

--- a/src/index.html
+++ b/src/index.html
@@ -567,6 +567,9 @@
           <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
           </a>
         </div>
+        <a href="#" class="contact__top-button">
+          <img class="top-button-img" src="./assets/images/contact-top-button.svg" alt="トップボタン">
+        </a>
       </div>
     </section>
 
