ブログ修正

--- a/src/index.html
+++ b/src/index.html
@@ -344,7 +344,7 @@
   <!--ブログ-->
   <section id="blog" class="blog">
     <div class="blog__inner inner">
-      <div class="blog section-title">
+      <div class="blog-section-title">
         <h2 class="section-title__main md-show">Blog</h2>
         <h2 class="section-title__main-white md-none">Blog</h2>
         <p class="section-title__sub md-show">ブログ</p>
