ピクパで修正

--- a/src/index.html
+++ b/src/index.html
@@ -553,14 +553,12 @@
                 <p class="contact-information__item-text">定休日:毎週火曜日</p>
               </li>
             </ul>
-            <div class="contact__img">
-              <img src="./assets/images/contact-img.jpg" alt="グレー色の背景">
-            </div>
+            <iframe class="contact__img" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2467.513625872067!2d127.69482336933658!3d26.222972059058005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z6YKj6KaH5biCMS0x!5e0!3m2!1sja!2sjp!4v1708751870509!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
         <div class="contact section-title">
-          <h2 class="section-title__main-shadow">Contact</h2>
-          <p class="section-title__sub-shadow">お問い合わせ</p>
+          <h2 class="section-title__main-large">Contact</h2>
+          <p class="section-title__sub">お問い合わせ</p>
           <p class="contact-section-title__text">ご予約・お問い合わせはコチラ</p>
         </div>
         <div class="contact-button-layout">
