キャンペーンpc修正

--- a/src/index.html
+++ b/src/index.html
@@ -189,10 +189,10 @@
           <h2 class="section-title__main">Campaign</h2>
           <p class="section-title__sub">キャンペーン</p>
         </div>
-        <div class="campaign-swiper__button-box">
+        <!-- <div class="campaign-swiper__button-box">
           <div class="campaign-swiper__button-prev"></div>
           <div class="campaign-swiper__button-next"></div>
-        </div>
+        </div> -->
         <div class="campaign-slider swiper">
           <div class="campaign-slider-wrapper swiper-wrapper">
             <div class="campaign-slider-slide swiper-slide">
