--- a/src/index.html
+++ b/src/index.html
@@ -415,14 +415,14 @@
                   </div>
                   <div class="voice-card__title-box2">
                     <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    <p class="voice-text-line"></p>
                   </div>
                 </div>
                 <div class="voice-card__img">
                   <img src="./assets/images/voice-img1.jpg" alt="ベージュの帽子を被った笑顔の女性">
                 </div>
               </div>
-              <div class="vocie-card__text-box">
+              <p class="voice-text-line"></p>
+              <div class="voice-card__text-box">
                 <p class="voice-card__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。</p>
               </div>
             </a>
@@ -437,14 +437,14 @@
                   </div>
                   <div class="voice-card__title-box2">
                     <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
-                    <p class="voice-text-line"></p>
                   </div>
                 </div>
                 <div class="voice-card__img">
                   <img src="./assets/images/voice-img2.jpg" alt="グッドグッド紺色のシャツを着た男性">
                 </div>
               </div>
-              <div class="vocie-card__text-box">
+              <p class="voice-text-line"></p>
+              <div class="voice-card__text-box">
                 <p class="voice-card__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。</p>
               </div>
             </a>
