--- a/src/index.html
+++ b/src/index.html
@@ -532,42 +532,46 @@
     <section id="contact" class="contact">
       <div class="contact__inner inner">
         <div class="contact__container">
-          <a href="index.html" class="contact__logo-layout">
-            <h3 class="contact__logo">
-              <img src="./assets/images/contact-logo.svg" alt="CodeUps">
-            </h3>
-          </a>
-          <p class="contact-text-line"></p>
-          <div class="contact-information">
-            <ul class="contact-information__items">
-              <li class="contact-information__item">
-                <p class="contact-information__item-text">沖縄県那覇市1-1</p>
-              </li>
-              <li class="contact-information__item">
-                <p class="contact-information__item-text">TEL:0120-000-0000</p>
-              </li>
-              <li class="contact-information__item">
-                <p class="contact-information__item-text">営業時間:8:30-19:00</p>
-              </li>
-              <li class="contact-information__item">
-                <p class="contact-information__item-text">定休日:毎週火曜日</p>
-              </li>
-            </ul>
-            <iframe class="contact__img" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2467.513625872067!2d127.69482336933658!3d26.222972059058005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z6YKj6KaH5biCMS0x!5e0!3m2!1sja!2sjp!4v1708751870509!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="contact__box">
+            <a href="index.html" class="contact__logo-layout">
+              <h3 class="contact__logo">
+                <img src="./assets/images/contact-logo.svg" alt="CodeUps">
+              </h3>
+            </a>
+            <p class="contact-text-line"></p>
+            <div class="contact-information">
+              <ul class="contact-information__items">
+                <li class="contact-information__item">
+                  <p class="contact-information__item-text">沖縄県那覇市1-1</p>
+                </li>
+                <li class="contact-information__item">
+                  <p class="contact-information__item-text">TEL:0120-000-0000</p>
+                </li>
+                <li class="contact-information__item">
+                  <p class="contact-information__item-text">営業時間:8:30-19:00</p>
+                </li>
+                <li class="contact-information__item">
+                  <p class="contact-information__item-text">定休日:毎週火曜日</p>
+                </li>
+              </ul>
+              <iframe class="contact__img" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2467.513625872067!2d127.69482336933658!3d26.222972059058005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z6YKj6KaH5biCMS0x!5e0!3m2!1sja!2sjp!4v1708751870509!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+          <div class="contact__title-layout">
+            <div class="contact section-title">
+              <h2 class="section-title__main-large">Contact</h2>
+              <p class="section-title__sub">お問い合わせ</p>
+              <p class="contact-section-title__text">ご予約・お問い合わせはコチラ</p>
+              <div class="contact-button-layout">
+                <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
+                </a>
+              </div>
+            </div>
+            <a href="#" class="contact__top-button">
+              <img class="top-button-img" src="./assets/images/contact-top-button.svg" alt="トップボタン">
+            </a>
           </div>
         </div>
-        <div class="contact section-title">
-          <h2 class="section-title__main-large">Contact</h2>
-          <p class="section-title__sub">お問い合わせ</p>
-          <p class="contact-section-title__text">ご予約・お問い合わせはコチラ</p>
-        </div>
-        <div class="contact-button-layout">
-          <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
-          </a>
-        </div>
-        <a href="#" class="contact__top-button">
-          <img class="top-button-img" src="./assets/images/contact-top-button.svg" alt="トップボタン">
-        </a>
       </div>
     </section>
 
