--- a/src/index.html
+++ b/src/index.html
@@ -575,95 +575,93 @@
         </div>
       </div>
     </section>
-
-    </main>
-      <!-- footer -->
-      <footer class="footer">
-        <div class="footer-menu">
-          <div class="footer-menu__inner">
-            <a href="index.html" class="footer__name-layout">
-              <h2 class="footer__name">
-                <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
-              </h2>
-            </a>
-            <div class="footer-menu__container">
-              <div class="footer-menu__container-left">
-                <ul class="footer-menu__items-a">
-                  <li class="footer-menu__item">
-                    <a href="#" class="footer-menu__link-a">
-                      <p class="footer__logo-text">キャンペーン</p>
-                    </a>
-                  </li>
-                    <li class="footer-menu__item-text"><a href="#">ライセンス取得</a></li>
-                    <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
-                    <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
-                    <li class="footer-menu__item">
-                      <a href="#" class="footer-menu__link-b">
-                        <p class="footer__logo-text">私たちについて</p>
-                      </a>
-                    </li>
-                 </ul>
-                 <ul class="footer-menu__items-b">
-                  <li class="footer-menu__item">
-                    <a href="#" class="footer-menu__link-a">
-                      <p class="footer__logo-text">ダイビング情報</p>
-                    </a>
-                  </li>
-                    <li class="footer-menu__item-text"><a href="#">ライセンス講習</a></li>
-                    <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
-                    <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
-                    <li class="footer-menu__item">
-                      <a href="#" class="footer-menu__link-b">
-                        <p class="footer__logo-text">ブログ</p>
-                      </a>
-                    </li>
-                 </ul>
-              </div>
-              <div class="footer-menu__container-right">
-                <ul class="footer-menu__items-a">
-                  <li class="footer-menu__item">
-                    <a href="#" class="footer-menu__link-a">
-                      <p class="footer__logo-text">お客様の声</p>
-                    </a>
-                  </li>
+    <!-- footer-menu -->
+    <section id="footer-menu" class="footer-menu">
+      <div class="footer-menu__inner">
+        <a href="#" class="footer__name-layout">
+          <h2 class="footer__name">
+            <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
+          </h2>
+        </a>
+        <div class="footer-menu__container">
+          <div class="footer-menu__container-left">
+            <ul class="footer-menu__items-a">
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-a">
+                    <p class="footer__logo-text">キャンペーン</p>
+                  </a>
+                </li>
+                  <li class="footer-menu__item-text"><a href="#">ライセンス取得</a></li>
+                  <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
+                  <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="footer-menu__item">
                     <a href="#" class="footer-menu__link-b">
-                      <p class="footer__logo-text">料金一覧</p>
+                      <p class="footer__logo-text">私たちについて</p>
                     </a>
                   </li>
-                    <li class="footer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-                    <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-                    <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
-                 </ul>
-                 <ul class="footer-menu__items-b">
-                  <li class="footer-menu__item">
-                    <a href="#" class="footer-menu__link-a">
-                      <p class="footer__logo-text">よくある質問</p>
-                    </a>
-                  </li>
-                  <li class="footer-menu__item">
-                    <a href="#" class="footer-menu__link-b">
-                      <p class="footer__logo-text">プライバシー<br>ポリシー</p>
-                    </a>
-                  </li>
+            </ul>
+            <ul class="footer-menu__items-b">
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-a">
+                    <p class="footer__logo-text">ダイビング情報</p>
+                  </a>
+                </li>
+                  <li class="footer-menu__item-text"><a href="#">ライセンス講習</a></li>
+                  <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
+                  <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
                   <li class="footer-menu__item">
                     <a href="#" class="footer-menu__link-b">
-                      <p class="footer__logo-text">利用規約</p>
+                      <p class="footer__logo-text">ブログ</p>
                     </a>
                   </li>
-                  <li class="footer-menu__item">
-                    <a href="#" class="footer-menu__link-b">
-                      <p class="footer__logo-text">お問い合わせ</p>
-                    </a>
-                  </li>
-                 </ul>
-              </div>
-            </div>
+            </ul>
+          </div>
+          <div class="footer-menu__container-right">
+            <ul class="footer-menu__items-a">
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-a">
+                    <p class="footer__logo-text">お客様の声</p>
+                  </a>
+                </li>
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-b">
+                    <p class="footer__logo-text">料金一覧</p>
+                  </a>
+                </li>
+                  <li class="footer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
+                  <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
+                  <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+            </ul>
+            <ul class="footer-menu__items-b">
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-a">
+                    <p class="footer__logo-text">よくある質問</p>
+                  </a>
+                </li>
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-b">
+                    <p class="footer__logo-text">プライバシー<br>ポリシー</p>
+                  </a>
+                </li>
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-b">
+                    <p class="footer__logo-text">利用規約</p>
+                  </a>
+                </li>
+                <li class="footer-menu__item">
+                  <a href="#" class="footer-menu__link-b">
+                    <p class="footer__logo-text">お問い合わせ</p>
+                  </a>
+                </li>
+            </ul>
           </div>
         </div>
+      </div>
+    </section>
+    </main>
+    <footer class="footer">
         <small class="footer__copyright">Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
-
-      </footer>
+    </footer>
   </div>
 </body>
 
