コンタクトのロゴ修正

--- a/src/index.html
+++ b/src/index.html
@@ -576,6 +576,7 @@
       </div>
     </section>
     </main>
+    <!--フッター-->
     <footer class="footer">
       <div class="footer-menu__inner">
         <a href="#" class="footer__name-layout">
@@ -583,6 +584,14 @@
             <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
           </h2>
         </a>
+        <div class="footer-logo-box">
+          <a class="facebook-logo">
+            <img src="./assets/images/facebook-logo.svg" alt="facebook">
+          </a>
+          <a class="instagram-logo">
+            <img src="./assets/images/insta-logo.svg" alt="instagram">
+          </a>
+        </div>
         <div class="footer-menu__container">
           <div class="footer-menu__container-left">
             <ul class="footer-menu__items-a">
