フッターpc修正

--- a/src/index.html
+++ b/src/index.html
@@ -576,18 +576,20 @@
     <!--フッター-->
     <footer class="footer">
       <div class="footer-menu__inner">
-        <a href="#" class="footer__name-layout">
-          <h2 class="footer__name">
-            <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
-          </h2>
-        </a>
-        <div class="footer-logo-box">
-          <a class="facebook-logo">
-            <img src="./assets/images/facebook-logo.svg" alt="facebook">
+        <div class="footer-menu__title">
+          <a href="#" class="footer__name-layout">
+            <h2 class="footer__name">
+              <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
+            </h2>
           </a>
-          <a class="instagram-logo">
-            <img src="./assets/images/insta-logo.svg" alt="instagram">
-          </a>
+          <div class="footer-logo-box">
+            <a class="facebook-logo">
+              <img src="./assets/images/facebook-logo.svg" alt="facebook">
+            </a>
+            <a class="instagram-logo">
+              <img src="./assets/images/insta-logo.svg" alt="instagram">
+            </a>
+          </div>
         </div>
         <div class="footer-menu__container">
           <div class="footer-menu__container-left">
@@ -646,7 +648,7 @@
               </li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">プライバシー<br>ポリシー</p>
+                  <p class="footer__logo-text">プライバシーポリシー</p>
                 </a>
               </li>
                 <li class="footer-menu__item">
