フッター修正

--- a/src/index.html
+++ b/src/index.html
@@ -648,7 +648,7 @@
               </li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">プライバシーポリシー</p>
+                  <p class="footer__logo-text">プライバシー<br class="md-show">ポリシー</p>
                 </a>
               </li>
                 <li class="footer-menu__item">
