meta修正とレスポンシブ対応

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
   <meta name="robots" content="noindex" />
   <!-- meta情報 -->
   <title>CodeUps</title>
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
+  <meta name="description" content="ダイビング" />
+  <meta name="keywords" content="CodeUps, diving" />
   <!-- ogp -->
-  <meta property="og:title" content="" />
-  <meta property="og:type" content="" />
+  <meta property="og:title" content="CodeUps" />
+  <meta property="og:type" content="website" />
   <meta property="og:url" content="" />
   <meta property="og:image" content="" />
-  <meta property="og:site_name" content="" />
+  <meta property="og:site_name" content="CodeUps" />
   <meta property="og:description" content="" />
   <!-- ファビコン -->
   <link rel="”icon”" href="" />
@@ -326,6 +326,9 @@
           <div class="information__img">
             <img src="./assets/images/information-img.jpg" alt="3匹の黄色い魚が珊瑚礁の近くを様子">
           </div>
+          <!-- <div class="colorbox">
+            <img src="./assets/images/information-img.jpg">
+          </div> -->
           <div class="information__box">
             <h3 class="information__box-title">ライセンス講習</h3>
             <p class="information__text-line"></p>
@@ -452,6 +455,7 @@
           <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
           </a>
         </div>
+      </div>
     </section>
     <!--プライス-->
     <section id="price" class="price">
