--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="noindex" />
   <!-- meta情報 -->
   <title>CodeUps</title>
-  <meta name="description" content="ダイビング" />
+  <meta name="description" content="ダイビングコンテンツの説明" />
   <meta name="keywords" content="CodeUps, diving" />
   <!-- ogp -->
   <meta property="og:title" content="CodeUps" />
@@ -15,7 +15,7 @@
   <meta property="og:url" content="" />
   <meta property="og:image" content="" />
   <meta property="og:site_name" content="CodeUps" />
-  <meta property="og:description" content="" />
+  <meta property="og:description" content="ダイビングコンテンツの説明" />
   <!-- ファビコン -->
   <link rel="”icon”" href="" />
     <!-- Google Fonts -->
