アニメーション追加

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script defer src="./assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
-  <script src="/js/script.js" defer></script>
+  <!-- <script src="/js/script.js" defer></script> -->
+  <script src="./assets/js/jquery.inview.min.js" defer></script>
 </head>
 <body>
  <div class="wrap">
@@ -322,7 +323,7 @@
           <p class="section-title__sub">ダイビング情報</p>
         </div>
         <div class="information__container">
-          <div class="information__img">
+          <div class="information__img colorbox">
             <img src="./assets/images/information-img.jpg" alt="3匹の黄色い魚が珊瑚礁の近くを様子">
           </div>
           <!-- <div class="colorbox">
@@ -417,7 +418,7 @@
                     <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
                   </div>
                 </div>
-                <div class="voice-card__img">
+                <div class="voice-card__img colorbox">
                   <img src="./assets/images/voice-img1.jpg" alt="ベージュの帽子を被った笑顔の女性">
                 </div>
               </div>
@@ -439,7 +440,7 @@
                     <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
                   </div>
                 </div>
-                <div class="voice-card__img">
+                <div class="voice-card__img colorbox">
                   <img src="./assets/images/voice-img2.jpg" alt="グッドグッド紺色のシャツを着た男性">
                 </div>
               </div>
@@ -519,7 +520,7 @@
               </dl>
             </div>
           </div>
-          <div class="price__img-pc md-none">
+          <div class="price__img-pc md-none colorbox">
             <img src="./assets/images/price-img1.jpg" alt="ウミガメが海中を移動している様子">
           </div>
         </div>
