--- a/src/index.html
+++ b/src/index.html
@@ -543,7 +543,9 @@
                   <p class="contact-information__item-text">沖縄県那覇市1-1</p>
                 </li>
                 <li class="contact-information__item">
-                  <p class="contact-information__item-text">TEL:0120-000-0000</p>
+                  <a href="TEL:0120-000-0000">
+                    <p class="contact-information__item-text">TEL:0120-000-0000</p>
+                  </a>
                 </li>
                 <li class="contact-information__item">
                   <p class="contact-information__item-text">営業時間:8:30-19:00</p>
