フッターとブログカードホバー追加

--- a/src/index.html
+++ b/src/index.html
@@ -348,8 +348,8 @@
           <p class="section-title__sub-white md-none">ブログ</p>
         </div>
         <div class="blog__cards">
-          <div class="blog-card__item-box">
-            <a href="#" class="blog-card__item">
+          <a class="blog-card__item-box">
+            <div href="#" class="blog-card__item">
               <div class="blog-card__img">
                 <img src="./assets/images/blog-img2.jpg" alt="海底にカラフルなイソギンチャクが生えている様子">
               </div>
@@ -359,10 +359,10 @@
                 <p class="blog-text-line"></p>
                 <p class="blog-card__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
-            </a>
-          </div>
-          <div class="blog-card__item-box">
-            <a href="#" class="blog-card__item">
+            </div>
+          </a>
+          <a class="blog-card__item-box">
+            <div href="#" class="blog-card__item">
               <div class="blog-card__img">
                 <img src="./assets/images/blog-img3.jpg" alt="ウミガメが海中を優雅に泳いでいる様子">
               </div>
@@ -372,10 +372,10 @@
                 <p class="blog-text-line"></p>
                 <p class="blog-card__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
-            </a>
-          </div>
-          <div class="blog-card__item-box">
-            <a href="#" class="blog-card__item">
+            </div>
+          </a>
+          <a class="blog-card__item-box">
+            <div href="#" class="blog-card__item">
               <div class="blog-card__img">
                 <img src="./assets/images/blog-img4.jpg" alt="イソギンチャクの間にカクレクマノミが隠れている様子">
               </div>
@@ -385,8 +385,8 @@
                 <p class="blog-text-line"></p>
                 <p class="blog-card__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
-            </a>
-          </div>
+            </div>
+          </a>
         </div>
         <div class="blog-button-layout">
           <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
