--- a/src/index.html
+++ b/src/index.html
@@ -153,8 +153,8 @@
         <h3 class="mv__text">into the ocean</h3>
       </div>
       <div class="mv__slider swiper">
-        <div class="mv__slider swiper-wrapper">
-          <div class="mv__slider swiper-slide">
+        <div class="mv__slider-wrapper swiper-wrapper">
+          <div class="mv__slider-slide swiper-slide">
             <div class="swiper-img">
               <img src="./assets/images/mv-img1-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
               <img src="./assets/images/mv-img1.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
@@ -539,14 +539,16 @@
             <p class="contact-text-line"></p>
             <div class="contact-information">
               <ul class="contact-information__items">
-                <li class="contact-information__item">
-                  <p class="contact-information__item-text">沖縄県那覇市1-1</p>
-                </li>
-                <li class="contact-information__item">
-                  <a href="TEL:0120-000-0000">
-                    <p class="contact-information__item-text">TEL:0120-000-0000</p>
-                  </a>
-                </li>
+                <address class="contact-private-information">
+                  <li class="contact-information__item">
+                    <p class="contact-information__item-text">沖縄県那覇市1-1</p>
+                  </li>
+                  <li class="contact-information__item">
+                    <a href="TEL:0120-000-0000">
+                      <p class="contact-information__item-text">TEL:0120-000-0000</p>
+                    </a>
+                  </li>
+                </address>
                 <li class="contact-information__item">
                   <p class="contact-information__item-text">営業時間:8:30-19:00</p>
                 </li>
