インナー修正

--- a/src/index.html
+++ b/src/index.html
@@ -186,8 +186,8 @@
     <section id="campaign" class="campaign">
       <div class="campaign__inner inner">
         <div class="campaign section-title">
-          <h2 class="section-title__main">Campaign</h2>
-          <p class="section-title__sub">キャンペーン</p>
+          <p class="section-title__main">Campaign</p>
+          <h2 class="section-title__sub">キャンペーン</h2>
         </div>
         <div class="campaign-swiper__container">
           <div class="campaign-slider swiper">
@@ -295,8 +295,8 @@
     <section id="about-us" class="about-us">
       <div class="about-us__inner inner">
         <div class="about-us section-title">
-        <h2 class="section-title__main">About us</h2>
-        <p class="section-title__sub">私たちについて</p>
+        <p class="section-title__main">About us</p>
+        <h2 class="section-title__sub">私たちについて</h2>
         </div>
         <div class="about-us__img">
           <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img2">
@@ -318,8 +318,8 @@
     <section id="information" class="information">
       <div class="information__inner inner">
         <div class="information section-title">
-          <h2 class="section-title__main">Information</h2>
-          <p class="section-title__sub">ダイビング情報</p>
+          <p class="section-title__main">Information</p>
+          <h2 class="section-title__sub">ダイビング情報</h2>
         </div>
         <div class="information__container">
           <div class="information__img colorbox">
@@ -342,10 +342,10 @@
     <section id="blog" class="blog">
       <div class="blog__inner inner">
         <div class="blog-section-title">
-          <h2 class="section-title__main md-show">Blog</h2>
-          <h2 class="section-title__main-white md-none">Blog</h2>
-          <p class="section-title__sub md-show">ブログ</p>
-          <p class="section-title__sub-white md-none">ブログ</p>
+          <p class="section-title__main md-show">Blog</p>
+          <p class="section-title__main-white md-none">Blog</p>
+          <h2 class="section-title__sub md-show">ブログ</h2>
+          <h2 class="section-title__sub-white md-none">ブログ</h2>
         </div>
         <div class="blog__cards">
           <a class="blog-card__item-box">
@@ -398,8 +398,8 @@
     <section id="voice" class="voice">
       <div class="voice__inner inner">
         <div class="voice section-title">
-          <h2 class="section-title__main">Voice</h2>
-          <p class="section-title__sub">お客様の声</p>
+          <p class="section-title__main">Voice</p>
+          <h2 class="section-title__sub">お客様の声</h2>
         </div>
         <div class="voice__cards">
           <div class="voice-card__item-box">
@@ -457,8 +457,8 @@
     <section id="price" class="price">
       <div class="price__inner inner">
         <div class="price section-title">
-          <h2 class="section-title__main">Price</h2>
-          <p class="section-title__sub">料金一覧</p>
+          <p class="section-title__main">Price</p>
+          <h2 class="section-title__sub">料金一覧</h2>
         </div>
         <div class="price__container">
           <div class="price__img-sp md-show">
@@ -561,8 +561,8 @@
           </div>
           <div class="contact__title-layout">
             <div class="contact section-title">
-              <h2 class="section-title__main-large">Contact</h2>
-              <p class="section-title__sub">お問い合わせ</p>
+              <p class="section-title__main-large">Contact</p>
+              <h2 class="section-title__sub">お問い合わせ</h2>
               <p class="contact-section-title__text">ご予約・お問い合わせはコチラ</p>
               <div class="contact-button-layout">
                 <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span>
@@ -582,9 +582,9 @@
       <div class="footer-menu__inner">
         <div class="footer-menu__title">
           <a href="#" class="footer__name-layout">
-            <h2 class="footer__name">
+            <h3 class="footer__name">
               <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
-            </h2>
+            </h3>
           </a>
           <div class="footer-logo-box">
             <a class="facebook-logo">
